# teachMe-agent

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
data/profiles/: .gitkeep
mcp_server/: __init__.py  server.py
teachme/: __init__.py  agent.py
web/: app.js  index.html  style.css
