[project]
name = "teachme-agent"
version = "0.1.0"
description = "TeachMe Agent — An AI-powered teaching assistant for Indian school students (Class 6-12) built with Google ADK and MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Himanshu Singh"}
]
keywords = ["ai-agent", "education", "adk", "mcp", "google-gemini", "teaching-assistant"]

dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "fastmcp>=2.0.0",
    "pymupdf>=1.25.0",
    "streamlit>=1.45.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hsinghweb/teachMe-agent"
Repository = "https://github.com/hsinghweb/teachMe-agent"

[tool.hatch.build.targets.wheel]
packages = ["teachme", "mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
